# kompas-plugins

./: CMakeLists.txt  PKGBUILD  README.md
debian/: changelog  copyright
modules/: CMakeLists.txt
package/archlinux/kompas-plugins/: .gitignore  PKGBUILD
package/archlinux/kompas-plugins-git/: PKGBUILD
package/archlinux/map2x-plugins-git/: PKGBUILD
package/debian/: changelog
package/debian-obs/: debian.kompas-plugins-dev.install  debian.kompas-plugins.install  kompas-plugins.dsc
package/rpm/: kompas-plugins.spec
src/: CMakeLists.txt
src/FilesystemCache/: CMakeLists.txt  FilesystemCache.conf  FilesystemCache.cpp  FilesystemCache.h
src/FilesystemCache/Test/: CMakeLists.txt  FilesystemCacheTest.cpp  FilesystemCacheTest.h  FilesystemCacheTestConfigure.h.cmake
src/FilesystemCache/Test/FilesystemCacheTestFiles/: index.kps
src/FreemapSkRasterModel/: CMakeLists.txt  FreemapSkRasterModel.conf  FreemapSkRasterModel.cpp  FreemapSkRasterModel.h
src/HikeBikeMapRasterModel/: CMakeLists.txt  HikeBikeMapRasterModel.conf  HikeBikeMapRasterModel.cpp  HikeBikeMapRasterModel.h
src/ImageRasterModel/: CMakeLists.txt  ImageRasterModel.conf  ImageRasterModel.cpp  ImageRasterModel.h
src/MapQuestOpenRasterModel/: CMakeLists.txt  MapQuestOpenRasterModel.conf  MapQuestOpenRasterModel.cpp  MapQuestOpenRasterModel.h
src/MarsCelestialBody/: CMakeLists.txt  MarsCelestialBody.conf  MarsCelestialBody.cpp  MarsCelestialBody.h
src/MoonCelestialBody/: CMakeLists.txt  MoonCelestialBody.conf  MoonCelestialBody.cpp  MoonCelestialBody.h
src/OpenGLMapView/: BaseTexture.cpp  BaseTexture.h  CMakeLists.txt  CelestialBody.cpp  CelestialBody.h  CelestialBodyShader.cpp  CelestialBodyShader.frag  CelestialBodyShader.h  Earth.cpp  Earth.h  EarthShader.cpp  EarthShader.h  EarthShader.vert  Icosphere.cpp  Icosphere.h  OpenGLMapView.conf  OpenGLMapView.cpp  OpenGLMapView.h  OpenGLMapViewPrivate.cpp  OpenGLMapViewPrivate.h
src/StereographicProjection/: CMakeLists.txt  StereographicProjection.conf  StereographicProjection.cpp  StereographicProjection.h
src/StereographicProjection/Test/: CMakeLists.txt  StereographicProjectionTest.cpp  StereographicProjectionTest.h
src/WorldMap1630RasterModel/: CMakeLists.txt  WorldMap1630RasterModel.conf  WorldMap1630RasterModel.cpp  WorldMap1630RasterModel.h
src/WorldMap1689RasterModel/: CMakeLists.txt  WorldMap1689RasterModel.conf  WorldMap1689RasterModel.cpp  WorldMap1689RasterModel.h
src/WorldMap1689TileModel/: CMakeLists.txt  WorldMap1689TileModel.conf  WorldMap1689TileModel.cpp
